--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -82,7 +82,7 @@ jobs:
         run: echo "Deploying to staging"
 
   deploy-prod:
-    if: github.event_name == 'push' && github.ref == 'refs/tags/*'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
